# MPI-Labs

./: CMakeLists.txt  Lab_1.cpp  Lab_2  Lab_2.cpp  main  output.csv  output.txt
